# research-os-api

./: .dockerignore  .env  .gitattributes  .gitignore  .tmp-openai-key.txt  AGENTS.md  Dockerfile  README.md  _tmp_check_cache.py  _tmp_check_coords.py  _tmp_check_intro.py  _tmp_coords_test.py  _tmp_docling_file.py  _tmp_docling_full.py  _tmp_docling_output.txt  _tmp_figure_crop.py  _tmp_figure_leak.py  _tmp_pymupdf_tables.py  _tmp_table_compare.py  _tmp_table_quality.py  _tmp_tei_structure.txt  docker-compose.yml  local_render.yaml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  wave-2-baseline.txt
.codex/: INSTRUCTIONS.md  config.toml
.playwright-cli/: page-2026-03-08T12-46-12-129Z.yml  page-2026-03-14T20-37-46-750Z.yml
.tmp/: data_role_smoke.py  publications-metrics-live.json  run_local_api_8001.py  simple_smoke.py  start-local-api-8001.ps1  start-local-frontend-5173-remote-api.ps1  start-local-frontend-5173.ps1  trace_imports.py  which_pkg.py
alembic/: env.py
data_library_store/: 4728b6a7-bf34-4838-ac60-e58d7b4da1c1.csv  5f0157bc-11ef-46e9-ae7e-5016832d6dd0.csv  6cc9003f-0986-4344-9a0a-c0714e293c89.csv  7af19f3f-dbcf-4d16-8dcb-4a59fc7da6d1.csv
data_local/: README.md
data_samples/: README.md
deploy/: .env.example  Caddyfile  Caddyfile.preview  Caddyfile.preview.example  research-os-db-backup.sh
docs/: CODEX_RULES.md  DATA_POLICY.md  DEPENDENCIES.md  DEPLOYMENT.md  OPENAI_USAGE_ANALYSIS.md  QUICKSTART.md  RUNBOOK.md  WORKSPACE.md  change-documentation-rules.md  change-log.md  design-governance.md  parallel-feature-delivery.md  (+3 more)
(+824 files in other folders)
